Add BMI Calculator project card to projects.html
Added a new project card for BMI Calculator with details.
updating web portfolio on 12 4 2025

--- a/projects.html
+++ b/projects.html
@@ -103,6 +103,17 @@
         </div>
       </div>
 
+       <div class="col-md-6 col-lg-4">
+        <div class="project-card">
+          <img src="https://via.placeholder.com/400x180?text=GPA+Calculator" alt="GPA Calculator">
+          <div class="card-body">
+            <h5>BMI Calculator</h5>
+            <p>Track your body metrics anytime with this fast, intuitive BMI calculator.</p>
+            <a href="https://github.com/muzamilqamar69/SecC-BCS-287/tree/main/Quiz%203" target="_blank" class="text-info text-decoration-none">View Project</a>
+          </div>
+        </div>
+      </div>
+
       <div class="col-md-6 col-lg-4">
         <div class="project-card">
           <img src="https://via.placeholder.com/400x180?text=Portfolio+Website" alt="Portfolio Project">
@@ -124,3 +135,4 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
