--- a/projects.html
+++ b/projects.html
@@ -83,7 +83,6 @@
 
       <div class="col-md-6 col-lg-4">
         <div class="project-card">
-          <img src="https://via.placeholder.com/400x180?text=GPA+Calculator" alt="GPA Calculator">
           <div class="card-body">
             <h5>GPA Calculator</h5>
             <p>A simple yet powerful GPA Calculator built to help students compute their GPA instantly.</p>
@@ -94,7 +93,6 @@
 
       <div class="col-md-6 col-lg-4">
         <div class="project-card">
-          <img src="https://via.placeholder.com/400x180?text=Marble+Store" alt="Marble Factory System">
           <div class="card-body">
             <h5>Marble Factory Management</h5>
             <p>A management system designed for marble stores to handle orders, inventory, and sales efficiently.</p>
@@ -105,7 +103,6 @@
 
        <div class="col-md-6 col-lg-4">
         <div class="project-card">
-          <img src="https://via.placeholder.com/400x180?text=GPA+Calculator" alt="GPA Calculator">
           <div class="card-body">
             <h5>BMI Calculator</h5>
             <p>Track your body metrics anytime with this fast, intuitive BMI calculator.</p>
@@ -114,9 +111,18 @@
         </div>
       </div>
 
+        <div class="col-md-6 col-lg-4">
+        <div class="project-card">
+          <div class="card-body">
+            <h5>Number Gesser Pro</h5>
+            <p>Challenge your mind with the pro edition of the classic number guesser.</p>
+            <a href="https://github.com/muzamilqamar69/SecC-BCS-287/tree/main/Lab%20Assignment%2002" target="_blank" class="text-info text-decoration-none">View Project</a>
+          </div>
+        </div>
+      </div>
+      
       <div class="col-md-6 col-lg-4">
         <div class="project-card">
-          <img src="https://via.placeholder.com/400x180?text=Portfolio+Website" alt="Portfolio Project">
           <div class="card-body">
             <h5>Portfolio Website</h5>
             <p>This personal website showcases my projects, skills, and background as a web developer.</p>
@@ -135,4 +141,5 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
