--- a/projects.html
+++ b/projects.html
@@ -120,6 +120,17 @@
           </div>
         </div>
       </div>
+  
+  <div class="col-md-6 col-lg-4">
+        <div class="project-card">
+          <div class="card-body">
+            <h5>Weather App</h5>
+            <p>Get accurate, real-time weather updates wherever you are.</p>
+            <a href="https://github.com/muzamilqamar69/SecC-BCS-287/tree/main/Assignment%203" target="_blank" class="text-info text-decoration-none">View Project</a>
+          </div>
+        </div>
+      </div>
+      
       
       <div class="col-md-6 col-lg-4">
         <div class="project-card">
@@ -141,5 +152,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
